<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sudadays.sdwg.MainActivity">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_shouye"
            style="@style/rbstyle"
            android:drawableTop="@null"
            android:text="@string/shouye" />

        <RadioButton
            android:id="@+id/rb_onetouch"
            style="@style/rbstyle"
            android:drawableTop="@null"
            android:text="@string/onetouch" />

        <RadioButton
            android:id="@+id/rb_zhanghao"
            style="@style/rbstyle"
            android:drawableTop="@null"
            android:text="@string/zhanghao" />

    </RadioGroup>

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/radiogroup"
        android:background="#dddddd" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div"/>

</RelativeLayout>
